@@ -20,6 +20,8 @@ import xmlrpclib
 import zlib
 
 from repository.netrepos import netserver
+from repository.filecontainer import FileContainer
+from repository import changeset
 import conarycfg
 
 from web.webauth import getAuth
@@ -95,6 +97,17 @@ def post(port, isSecure, repos, req):
         return httpHandler._methodHandler()
 
 def get(port, isSecure, repos, req):
+    def _writeNestedFile(req, name, tag, size, f, sizeCb):
+        if changeset.ChangedFileTypes.refr[4:] == tag[2:]:
+            path = f.read()
+            size = os.stat(path).st_size
+            tag = tag[0:2] + changeset.ChangedFileTypes.file[4:]
+            sizeCb(size, tag)
+            req.sendfile(path)
+        else:
+            sizeCb(size, tag)
+            req.write(f.read())
+
     uri = req.uri
     if uri.endswith('/'):
         uri = uri[:-1]
@@ -133,7 +146,16 @@ def get(port, isSecure, repos, req):
 
         req.content_type = "application/x-conary-change-set"
         for (path, size) in items:
-            req.sendfile(path)
+            if path.endswith('.ccs-out'):
+                cs = FileContainer(open(path))
+                cs.dump(req.write, 
+                        lambda name, tag, size, f, sizeCb: 
+                            _writeNestedFile(req, name, tag, size, f,
+                                             sizeCb))
+
+                del cs
+            else:
+                req.sendfile(path)
 
             if path.startswith(repos.tmpPath) and \
                     not(os.path.basename(path)[0:6].startswith('cache-')):
